# news_portal

./: .pre-commit-config.yaml  dependencies.py  main.py  pyproject.toml  settings.py
app/: hashing_password.py
app/dbschema/: default.esdl
app/dbschema/migrations/: 00001.edgeql  00003.edgeql
app/queries/: create_user.edgeql  get_news.edgeql  get_user_by_username_async_edgeql.py  get_users.edgeql  update_news.edgeql  update_news_async_edgeql.py
app/routers/: company.py  news.py  user.py
app/schemas/: company_schema.py  news_schema.py  user_schema.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql
models/: user_model.py
queries/: create_company.edgeql  create_company_async_edgeql.py  create_news.edgeql  create_news_async_edgeql.py  create_user_async_edgeql.py  delete_news.edgeql  delete_news_async_edgeql.py  get_company.edgeql  get_company_async_edgeql.py  get_news_async_edgeql.py  get_subscriber_list.edgeql  get_subscriber_list_async_edgeql.py  get_user_by_username.edgeql  get_user_by_username_async_edgeql.py  get_users.edgeql  get_users_async_edgeql.py  update_news.edgeql  update_news_async_edgeql.py
responses_list/: success_response.py
routers/: company.py  login.py  news.py  user.py
schemas/: news_schema.py
